fix white space

--- a/src/styles/storylist.scss
+++ b/src/styles/storylist.scss
@@ -84,3 +84,7 @@
     content: "Made with ♥ by Hack4Impact UIUC"
   }
 }
+
+.sidebar-container {
+  width: 0;
+}
